Changed default dia_folder

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ manifest {
 params {
 
     help = false
-    dia_folder = 'Data/DIA/*.mzXML'
+    dia_folder = 'Data/DIA'
     diau_se_params = 'Params/diaumpire_se.params'
 }
 
