update dia-umpire container

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,8 @@ params {
 
 process{
     withName:diaUmpire {
-	container = 'quay.io/biocontainers/dia_umpire:2.1.3--1'
+	// container = 'quay.io/biocontainers/dia_umpire:2.1.3--1'
+	container = 'biocontainers/dia-umpire:v2.1.2_cv4'
     }
     withName:mgf2mzxml {
 	container = 'digitalproteomes/tpp-dev'
